updating Todo task list

--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
-[ ] read chapters 11
-[ ] read chapters 12
-[ ] read chapters 13
+- [X] read chapters 11
+- [ ] read chapters 12
+- [ ] read chapters 13
 [ ] read chapters 14
 [ ] read chapters 15
 [ ] read chapters 16
